gcc/testsuite/rust/rustc/ui/issues/issue-39687.rs
#![feature(fn_traits)]

fn main() {
    <fn() as Fn()>::call;
// { dg-error ".E0229." "" { target *-*-* } .-1 }
}

